tests/integration/snapshots/integration__common__array_empty.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
[]
stdout --- 
[]
stderr --- 
<empty>
