tests/integration/snapshots/integration__common__array_many.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
[1, 2, 3]
stdout --- 
[1, 2, 3]
stderr --- 
<empty>
