tests/integration/snapshots/integration__common__array_missing_value.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
[1, ]
stdout --- 
<empty>
stderr --- 
error: expected json value, found `]`
 --> stdin:1:5
  |
1 | [1, ]
  |   - ^
  |   |
  |   expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - [1, ]
1 + [1 ]
  |
