tests/integration/snapshots/integration__common__array_single.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
[1]
stdout --- 
[1]
stderr --- 
<empty>
