tests/integration/snapshots/integration__common__array_subarrays.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
[["a"], [true, false]]
stdout --- 
[["a"], [true, false]]
stderr --- 
<empty>
