tests/integration/snapshots/integration__common__invalid_hex_digit_in_escape.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
"\u1FZA"
stdout --- 
<empty>
stderr --- 
error: expected hex digit 3 of 4 in escape, found `Z`
 --> stdin:1:6
  |
1 | "\u1FZA"
  | ---  ^
  | ||
  | |\u escape started here
  | opening quote found here
